--- a/merged_score_tool.html
+++ b/merged_score_tool.html
@@ -554,7 +554,7 @@
         <div class="file-input-wrapper">
             <!-- 注意：ID 已改為 imageInput 以配合 index copy.html 的邏輯 -->
             <input type="file" id="imageInput" class="file-input" accept="image/jpeg,image/jpg">
-            <label for="imageInput" class="file-btn">點擊選擇角色圖片</label>
+            <label for="imageInput" class="file-btn"></label>
         </div>
         <div style="display:flex; align-items:center; gap:0.6rem; margin-left:0.6rem;">
             <input id="quickJson" placeholder="貼上 JSON 並按 Enter" style="width:260px; padding:0.6rem; border-radius:8px; background:rgba(255,255,255,0.03); color:var(--text-primary); border:1px solid rgba(255,255,255,0.06); font-family:monospace; font-size:0.9rem;">
@@ -11717,3 +11717,4 @@
 </body>
 
 </html>
+
