--- a/merged_score_tool.html
+++ b/merged_score_tool.html
@@ -714,6 +714,7 @@
 
 <body>
     <div class="controls">
+        <button id="homeBtn" class="switch-btn" onclick="location.reload()">🏠</button>
         <div class="file-input-wrapper">
             <!-- 注意：ID 已改為 imageInput 以配合 index copy.html 的邏輯 -->
             <input type="file" id="imageInput" class="file-input" accept="image/jpeg,image/jpg">
@@ -762,7 +763,7 @@
             <div class="section">
                 <div class="section-title">步驟 2: 選擇目標檔案</div>
                 <div class="file-input-group">
-                    <label class="file-input-label">選擇要替換的 JSON 檔案：</label>
+                    <label class="file-input-label">選擇要替換的 JSON 檔案：<a href="https://wuwaechotool.pages.dev/" target="_blank" style="color: yellow;">鸣潮声骸评分工具</a></label>
                     <input type="file" id="targetFileInputModal" accept=".json">
                 </div>
             </div>
