--- a/merged_score_toolv2.html
+++ b/merged_score_toolv2.html
@@ -785,7 +785,7 @@
         </div>
     </div>
 
-    <script>
+    <script type="module">
         // ==================================================================================
         // 來自 index copy.html 的資料區塊 (請從原檔案複製完整內容)
         // ==================================================================================
@@ -10943,3 +10943,4 @@
 </body>
 
 </html>
+
