--- a/try.html
+++ b/try.html
@@ -13,7 +13,7 @@
     <pre id="output"></pre>
 
     <script>
-        let NumberTemplates_1_1 = {}; // 先宣告
+        const NumberTemplates_1_1 = {}; // 先宣告
 
         (async () => {
             try {
@@ -29,3 +29,4 @@
 </body>
 
 </html>
+
