--- a/merged_score_tool.html
+++ b/merged_score_tool.html
@@ -721,7 +721,7 @@
         <div class="file-input-wrapper">
             <!-- 注意：ID 已改為 imageInput 以配合 index copy.html 的邏輯 -->
             <input type="file" id="imageInput" class="file-input" accept="image/jpeg,image/jpg">
-            <label for="imageInput" class="file-btn">選擇圖片</label>
+            <label for="imageInput" class="file-btn">圖片</label>
         </div>
         
         <div style="display:none; align-items:center; gap:0.6rem; margin-left:0.6rem;">
@@ -730,11 +730,11 @@
         </div>
 
         <div class="file-input-wrapper">
-            <button id="openModalBtn" class="file-btn">匯出數據</button>
+            <button id="openModalBtn" class="file-btn">匯出</button>
         </div>
 
         <div class="file-input-wrapper">
-            <button id="openHistoryBtn" class="file-btn">歷史紀錄</button>
+            <button id="openHistoryBtn" class="file-btn">歷史</button>
         </div>
 
         <button class="switch-btn" id="layoutToggle">💻</button>
