--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,9 @@
                 <a href="https://sites.google.com/view/gamedada-ocr/Wuthering-Waves/analyze-DC" target="_blank"
                     style="color: var(--accent-blue); text-decoration: none; border: 1px solid var(--accent-blue); padding: 0.4rem 0.8rem; border-radius: 4px; transition: all 0.3s ease; font-size: 0.9rem;">GAME
                     ZH 《鳴潮》角色資訊卡辨識(巴友easonqiu開發的評分工具)</a>
+                <a href="https://nkxrfxforum.github.io/.github.io/SupAffixGame.html" target="_blank"
+                    style="color: var(--accent-blue); text-decoration: none; border: 1px solid var(--accent-blue); padding: 0.4rem 0.8rem; border-radius: 4px; transition: all 0.3s ease; font-size: 0.9rem;">骰副詞條模擬器</a>
+
             </div>
         </div>
         <div class="section" style="display: flex; gap: 10px; margin-bottom: 1rem;">
